# chattor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MIGRATION_FIX.md  README.md  SECURITY.md  TESTING.md  build.rs  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
completions/: _chattor  chattor.bash  chattor.fish
docs/: Phase2-Progress.md  Phase2b-Progress.md  Testing-Phase2b.md  phase1-progress.md
docs/plans/: 2026-02-06-phase1-implementation.md  2026-02-06-phase2-design.md  2026-02-06-phase2-implementation.md  2026-02-06-torrent-chat-design.md  2026-02-09-network-layer-mvp-design.md  2026-02-09-network-layer-mvp-implementation.md  2026-02-09-phase2b-design.md  2026-02-10-ephemeral-messages-design.md  2026-02-10-read-receipts-design.md  2026-02-12-broadcast-channels-design.md  2026-02-12-phase4-polish-theming-design.md  2026-02-12-startup-screen-design.md  2026-02-12-startup-screen-implementation.md  2026-02-12-vanity-mining-signal-wiring-design.md  2026-02-12-vanity-mining-signal-wiring-implementation.md  2026-02-13-phase5-completion-design.md  2026-02-13-phase5-completion-implementation.md  2026-02-13-phase6-chunk1-implementation.md  2026-02-13-project-polish-design.md  2026-02-13-readme-overhaul-design.md  2026-02-13-real-tor-hidden-service-design.md  2026-02-13-real-tor-hidden-service-implementation.md  2026-02-13-user-docs-implementation.md  2026-02-16-p2p-messaging-hardening-design.md  2026-02-16-p2p-messaging-hardening-implementation.md  2026-02-17-ux-polish-design.md  2026-02-17-ux-polish-implementation.md  2026-02-19-distribution-packaging-design.md  2026-02-19-distribution-packaging.md  2026-02-19-website-design.md  2026-02-19-website-implementation.md  2026-02-25-cli-daemon-mcp-design.md  2026-02-25-cli-daemon-mcp-implementation.md  2026-02-25-performance-ux-design.md  2026-02-25-performance-ux-implementation.md  2026-03-02-security-hardening-design.md  2026-03-02-security-hardening-implementation.md
docs/plans/archive/: 2026-02-09-phase2b-production-implementation.md  2026-02-09-phase2b-production.md  2026-02-10-conversation-ui-design.md  2026-02-10-conversation-ui-implementation.md  2026-02-10-friend-request-notifications-design.md  2026-02-10-signal-encryption-design.md  2026-02-12-broadcast-channels-implementation.md  2026-02-12-phase4-polish-theming-implementation.md  2026-02-13-phase6-chunk1-polish-design.md  2026-02-13-project-polish-implementation.md  2026-02-13-readme-overhaul-implementation.md  2026-02-13-user-docs-design.md
docs/superpowers/plans/: 2026-06-09-split-daemon-rpc.md  2026-06-09-split-db-queries.md  2026-06-09-split-ui-state.md  2026-06-10-crypto-session-facade.md
docs/superpowers/specs/: 2026-06-09-split-daemon-rpc-design.md  2026-06-09-split-db-queries-design.md  2026-06-09-split-ui-state-design.md  2026-06-10-crypto-session-facade-design.md
man/: chattor.1
scripts/: test-two-instances.sh
src/: app.rs  cli.rs  client.rs  error.rs  lib.rs  main.rs  notifications.rs  presence.rs
src/config/: mod.rs  settings.rs
src/crypto/: identity.rs  mod.rs  prekey_store.rs  session_manager.rs  session_store.rs  signal.rs  vanity.rs
src/daemon/: event_loop.rs  mod.rs  pid.rs  rpc.rs  socket.rs  tasks.rs
src/daemon/rpc/: channels.rs  friends.rs  messaging.rs  mod.rs  system.rs
src/db/: connection.rs  encryption.rs  mod.rs  queries.rs  schema.rs
src/db/queries/: channels.rs  friends.rs  messaging.rs  mod.rs  settings.rs
src/handlers/: channels.rs  friend_request.rs  messaging.rs  mod.rs
src/mcp/: server.rs  tools.rs
src/net/: framing.rs  listener.rs  mod.rs  pool.rs  queue.rs  queue_processor.rs  rate_limit.rs  receiver.rs  sender.rs
src/protocol/: friend_code.rs  friend_request.rs  message.rs  mod.rs
src/tor/: address.rs  client.rs  connection.rs  hidden_service.rs  mod.rs
src/ui/: app_ui.rs  bootstrap.rs  channel_feed.rs  conversation.rs  error.rs  input.rs  mining.rs  mod.rs  modals.rs  sidebar.rs  state.rs  text.rs  theme.rs
src/ui/state/: adding_friend.rs  channel.rs  ephemeral.rs  friend_requests.rs  identity.rs  mod.rs  normal.rs
tests/: daemon_test.rs  e2e_messaging.rs  integration.rs
tests/integration/: messaging_test.rs  mod.rs  presence_test.rs
website/: .gitignore  astro.config.mjs  netlify.toml  package-lock.json  package.json
website/src/components/: ArchDiagram.astro  FeatureCard.astro  Features.astro
website/src/content/docs/: contributing.md  faq.md  index.mdx
website/src/content/docs/architecture/: overview.md  signal-protocol.md  tor-integration.md
website/src/content/docs/getting-started/: installation.md  quickstart.md
website/src/content/docs/guides/: daemon-cli.md  friend-codes.md  theming.md
website/src/styles/: custom.css
