[package]
name = "torrent-chat"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Privacy-first TUI chat application over Tor"
license = "MIT OR Apache-2.0"

[dependencies]
# TUI
ratatui = "0.27"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Tor integration
arti = "2.0"
arti-client = "0.39"
tor-rtcompat = "0.39"

# Database
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }

# Cryptography
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Phase 2: Signal Protocol and utilities
libsignal-protocol = { package = "libsignal-dezire", version = "0.1.146" }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
