[package]
name = "chattor"
version = "0.1.0"
edition = "2021"
description = "Privacy-first TUI chat application over Tor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmsingleton/chattor"
readme = "README.md"
keywords = ["chat", "tor", "privacy", "encryption", "p2p"]
categories = ["command-line-utilities", "cryptography", "network-programming"]
rust-version = "1.75"

[dependencies]
# TUI
ratatui = "0.27"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Tor integration
arti = "2.0"
arti-client = { version = "0.39", features = ["onion-service-service", "onion-service-client"] }
tor-rtcompat = "0.39"
tor-hsservice = "0.39"
tor-cell = "0.39"
futures = "0.3"
safelog = "0.7"

# Database
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }

# Cryptography
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base32 = "0.4"
sha3 = "0.10"
hkdf = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Phase 2: Signal Protocol and utilities
libsignal-protocol = { package = "libsignal-dezire", version = "0.1.146" }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
chrono = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Clipboard
arboard = "3"

# Desktop notifications
notify-rust = "4"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"
