[package]
name = "chattor"
version = "0.1.0"
edition = "2021"
description = "Privacy-first TUI chat application over Tor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmsingleton/chattor"
readme = "README.md"
keywords = ["chat", "tor", "privacy", "encryption", "p2p"]
categories = ["command-line-utilities", "cryptography", "network-programming"]
rust-version = "1.75"

[dependencies]
# TUI
ratatui = "0.27"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Tor integration
arti = "2.0"
arti-client = { version = "0.39", features = ["onion-service-service", "onion-service-client"] }
tor-rtcompat = "0.39"
tor-hsservice = "0.39"
tor-cell = "0.39"
futures = "0.3"
safelog = "0.7"

# Database
rusqlite = { version = "0.38", features = ["bundled-sqlcipher"] }

# Cryptography
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
argon2 = "0.5"
rand = "0.8"
base32 = "0.4"
sha3 = "0.10"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"

# Phase 2: Signal Protocol and utilities
libsignal-protocol = { package = "libsignal-dezire", version = "0.1.146" }
uuid = { version = "1.6", features = ["v4", "serde"] }
base64 = "0.21"
chrono = "0.4"

# Concurrent collections
dashmap = "6"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Clipboard
arboard = "3"

# Security
rpassword = "5"

# Desktop notifications
notify-rust = "4"

# Unix process management
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4"

[package.metadata.deb]
section = "net"
assets = [
    ["target/release/chattor", "usr/bin/", "755"],
    ["man/chattor.1", "usr/share/man/man1/", "644"],
    ["completions/chattor.bash", "usr/share/bash-completion/completions/chattor", "644"],
    ["completions/_chattor", "usr/share/zsh/site-functions/_chattor", "644"],
    ["completions/chattor.fish", "usr/share/fish/vendor_completions.d/chattor.fish", "644"],
]
depends = "libc6"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/chattor", dest = "/usr/bin/chattor", mode = "755" },
    { source = "man/chattor.1", dest = "/usr/share/man/man1/chattor.1", mode = "644" },
    { source = "completions/chattor.bash", dest = "/usr/share/bash-completion/completions/chattor", mode = "644" },
    { source = "completions/_chattor", dest = "/usr/share/zsh/site-functions/_chattor", mode = "644" },
    { source = "completions/chattor.fish", dest = "/usr/share/fish/vendor_completions.d/chattor.fish", mode = "644" },
]
